<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="launch_spotify_streamer">"This button will launch Spotify Streamer App!"</string>
    <string name="launch_xyz_reader">"This button will launch XYZ Reader App!"</string>
    <string name="launch_capstone">"This button will launch Capstone App!"</string>
    <string name="launch_build_it_bigger">"This button will launch Build It Bigger App!"</string>
    <string name="launch_scores_app">"This button will launch Scores App!"</string>
    <string name="launch_library_app">"This button will launch Library App!"</string>
</resources>